Fixed .boxes overflow

--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ header nav a:hover {
 }
 
 #vision .boxes {
+  overflow: hidden;
   margin-left: -1.5rem;
   max-width: 560px;
   width: 100%;
